Eliminate runescribing inconsistency